ingress/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    # Reglas para indutienda.com apuntando a mantenimiento
    - host: indutienda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 80
    - host: www.indutienda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 80
    
    # Catch-all: cualquier otro tráfico también va a mantenimiento
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 80
